final before branch

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -101,7 +101,7 @@ textarea {
 }
 
 /* ==========================================================================
-   Responsive typography
+   Fonts
    ========================================================================== */
 
 /* ==========================================================================
