--- a/src/views/includes/header.jade
+++ b/src/views/includes/header.jade
@@ -25,10 +25,12 @@ html(xmlns='http://www.w3.org/1999/xhtml')
         link(rel='shortcut icon' href!= logo)
         // STYLESHEETS
         link(rel='stylesheet' href='stylesheets/materialize.min.css')
+        link(rel='stylesheet' href='stylesheets/pace-theme-flat-top.css')
         link(rel='stylesheet' href='stylesheets/normalize.css')
         link(rel='stylesheet' href='stylesheets/main.css')
         // JAVASCRIPTS
         script(src='javascripts/vendor/jquery-1.11.3.min.js')
+        script(src='javascripts/vendor/pace.js')
         script(src='javascripts/vendor/materialize.min.js')
         script(src='javascripts/vendor/modernizr-2.8.3.min.js')
         //GOOGLE FONTS
