--- a/src/views/includes/left.jade
+++ b/src/views/includes/left.jade
@@ -3,7 +3,7 @@ section(id='resume-left-side')
         div(class!= templates['contactHeader'])
             h3(class='white-text center-align remove-margin-top-bottom') Contact
     //CANDIDATE CONTACT
-    include contact
+    include links
     div(class!= templates['skillsHeader'])
         h3(class='white-text center-align remove-margin-top-bottom') Skills
     //CANDIDATE SKILLS
