--- a/src/views/error.jade
+++ b/src/views/error.jade
@@ -11,7 +11,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
         link(href='http://fonts.googleapis.com/css?family=Exo+2:300italic,100italic,200italic,200,900italic,300,400,100,400italic,900' rel='stylesheet' type='text/css')
 block content
     div(class='container #ffffff white')
-        h1= message
-        h2= error.status
-        h4 Sorry, but the page you were trying to view does not exist.
+        h4 #{error.status}
+        p(class='flow-text') #{message}
+        p(class='flow-text') Sorry, but the page you were trying to view does not exist.
         pre #{error.stack}
