--- a/src/views/includes/hello.jade
+++ b/src/views/includes/hello.jade
@@ -1,26 +1,20 @@
 - var message = false
-div.container
-    div.row
-        div(class='col s12', id='footer-form')
-            form(method = 'post', action = 'contact/send')
-                div(class='row padding-top')
-                    p.form-group(class='input-field col s12')
-                        label
-                            span(class='contact-form-labels') Name*
-                        input.name.form-control(class='white-text' type='text', name = 'name', placeholder='Enter Name')
-                    p.form-group(class='input-field col s12')
-                        label
-                            span(class='contact-form-labels') Email*
-                        input.email.form-control(class='white-text' type='email', name = 'email' placeholder='Enter Email')
-                    p.form-group(class='input-field col s12')
-                        label
-                            span(class='contact-form-labels') Message
-                        textarea.form-control(value='' placeholder='Wayne Enterprises is interested in your profile.' name='message' id='message' type='textarea' class='validate materialize-textarea contact-form-values white-text', required, message=true)
-                div(class='right')
-                    if (message === true)
-                        button(class!= templates.submitButton type='submit', disabled) Submit
-                            i(class='material-icons left') send
-                    else
-                        button(class!= templates.submitButton type='submit') Submit
-                            i(class='material-icons left') send
-
+div.row
+    div#footer-form.col.s12
+        form(method = 'post', action = 'contact/send')
+            div.row.padding-top
+                p.form-group.input-field.col.s12
+                    label
+                        span.contact-form-labels Name*
+                    input#name.form-control.white-text(type='text', name = 'name', placeholder='Enter Name')
+                p.form-group.input-field.col.s12
+                    label
+                        span.contact-form-labels Email*
+                    input#email.form-control.white-text(type='email', name = 'email' placeholder='Enter Email')
+                p.form-group.input-field.col.s12
+                    label
+                        span.contact-form-labels Message
+                    textarea#email.form-control.validate.materialize-textarea.contact-form-values.white-text(value='' placeholder='Wayne Enterprises is interested in your profile.' name='message' type='textarea', required, message=true)
+            div(class='right')
+                    button(class!= templates.submitButton type='submit') Submit
+                        i.material-icons.left send
