--- a/src/views/includes/common/header.jade
+++ b/src/views/includes/common/header.jade
@@ -24,8 +24,8 @@ html(xmlns='http://www.w3.org/1999/xhtml')
         title!= title
         link(rel='shortcut icon' href!= logo)
         // STYLESHEETS
-        link(rel='stylesheet' href='stylesheets/materialize.min.css')
-        link(rel='stylesheet' href='stylesheets/pace-theme-flat-top.css')
+        link(rel='stylesheet' href='stylesheets/vendor/materialize.min.css')
+        link(rel='stylesheet' href='stylesheets/vendor/pace-theme-flat-top.css')
         link(rel='stylesheet' href='stylesheets/normalize.css')
         link(rel='stylesheet' href='stylesheets/main.css')
         // JAVASCRIPTS
