--- a/src/views/includes/components/right.jade
+++ b/src/views/includes/components/right.jade
@@ -2,4 +2,4 @@ section(class='resume-right-side')
     div(class!= templates['experienceHeader'])
         h3(class='white-text center-align remove-margin-top-bottom') Experience
     //CANDIDATE RESUME
-    include resume
+    include ../resume/resume
