--- a/src/public/stylesheets/build.css
+++ b/src/public/stylesheets/build.css
@@ -123,7 +123,7 @@ textarea {
 @media only screen
 and (min-device-width : 320px)
 and (max-device-width : 480px) {
-.first-name {
+.resume-builder {
         color: #ffffff;
         letter-spacing: 0.25rem;
         text-transform: uppercase;
@@ -132,7 +132,7 @@ and (max-device-width : 480px) {
         font-size: 1.75rem;
     }
 
-    .last-name {
+    .step {
         color: #ffffff;
         text-transform: uppercase;
         font-style: italic;
@@ -172,7 +172,7 @@ and (max-device-width : 480px) {
 
 @media only screen
 and (min-width : 321px) {
-    .first-name {
+    .resume-builder {
         color: #ffffff;
         letter-spacing: 0.25rem;
         text-transform: uppercase;
@@ -181,7 +181,7 @@ and (min-width : 321px) {
         font-size: 2.33rem;
     }
 
-    .last-name {
+    .step {
         color: #ffffff;
         text-transform: uppercase;
         font-style: italic;
@@ -241,7 +241,7 @@ and (min-width : 321px) {
 
 @media only screen
 and (max-width : 320px) {
-    .first-name {
+    .resume-builder {
         color: #ffffff;
         letter-spacing: 0.25rem;
         text-transform: uppercase;
@@ -250,7 +250,7 @@ and (max-width : 320px) {
         font-size: 2rem;
     }
 
-    .last-name {
+    .step {
         color: #ffffff;
         text-transform: uppercase;
         font-style: italic;
@@ -349,7 +349,7 @@ and (max-device-width : 1224px) {
 and (min-device-width : 768px)
 and (max-device-width : 1024px)
 and (orientation : landscape) {
-    .first-name {
+    .resume-builder {
         color: #ffffff;
         letter-spacing: 0.25rem;
         text-transform: uppercase;
@@ -358,7 +358,7 @@ and (orientation : landscape) {
         font-size: 4.75rem;
     }
 
-    .last-name {
+    .step {
         color: #ffffff;
         text-transform: uppercase;
         font-style: italic;
@@ -376,7 +376,7 @@ and (orientation : landscape) {
 and (min-device-width : 768px)
 and (max-device-width : 1024px)
 and (orientation : portrait) {
-    .first-name {
+    .resume-builder {
         color: #ffffff;
         letter-spacing: 0.25rem;
         text-transform: uppercase;
@@ -385,7 +385,7 @@ and (orientation : portrait) {
         font-size: 3.75rem;
     }
 
-    .last-name {
+    .step {
         color: #ffffff;
         text-transform: uppercase;
         font-style: italic;
@@ -401,7 +401,7 @@ and (orientation : portrait) {
 
 @media only screen
 and (min-width : 1224px) {
-    .first-name {
+    .resume-builder {
         color: #ffffff;
         letter-spacing: 0.25rem;
         text-transform: uppercase;
@@ -410,7 +410,7 @@ and (min-width : 1224px) {
         font-size: 5.75rem;
     }
 
-    .last-name {
+    .step {
         color: #ffffff;
         text-transform: uppercase;
         font-style: italic;
@@ -455,7 +455,7 @@ and (min-width : 1224px) {
 
 @media only screen
 and (min-width : 1824px) {
-    .first-name {
+    .resume-builder {
         color: #ffffff;
         letter-spacing: 0.25rem;
         text-transform: uppercase;
@@ -464,7 +464,7 @@ and (min-width : 1824px) {
         font-size: 5.75rem;
     }
 
-    .last-name {
+    .step {
         color: #ffffff;
         text-transform: uppercase;
         font-style: italic;
