Builder: 75%, TODO: Resume Job Bullets, for each logic.

--- a/src/views/build.jade
+++ b/src/views/build.jade
@@ -129,7 +129,7 @@ block content
                                         i#reverse6.material-icons.left.medium.back arrow_back
                                 div.col.s6.valign
                                     div.right
-                                        button#buildMyShyt.btn-large(onclick='consoleTheme()', type='submit') Submit
+                                        button#buildMyShyt.btn-large(onclick='consoleTheme()', type='submit') Add Details
     script(src='javascripts/plugins.js')
     script(src='javascripts/main.js')
     script(src='javascripts/form.js')
