--- a/src/views/details.jade
+++ b/src/views/details.jade
@@ -27,16 +27,14 @@ html(xmlns='http://www.w3.org/1999/xhtml')
 block content
     div.container.padding-top.padding-bottom
         div.center-align
-            h1#reumeBuilderHeader.resume-builder.black-text.remove-margin-top-bottom Resumé Builder
-            p.flow-text.hide-on-small-only Welcome! Assuming you started with the Git repository and followed the steps listed via either the <strong>README.md</strong> or the <strong>wiki</strong>. Follow steps 1 through 7 below to generate your own resumé.
-            p.flow-text.hide-on-med-and-up Welcome! Assuming you started with the Git repository and followed the steps listed via either the <strong>README.md</strong> or the <strong>wiki</strong>. Please visit this app on a tablet or desktop, mobile coming soon!
+            h1#reumeBuilderHeader.resume-builder.black-text.remove-margin-top Resumé Builder
         div.row.hide-on-small-only
             div.col.s12
                 form#mainInfo(method = 'post', action = 'build/create')
                     fieldset#jobs
                         .card-panel
                             div.center
-                                h1#step4.step.black-text.remove-margin-top-bottom STEP 5
+                                h1#step4.step.black-text.remove-margin-top-bottom Step 8
                         div#resumeInput
                             include includes/build/resume
                         #controls.card-panel
