Made app call to new JSON. Have to parse and modify.

--- a/src/views/includes/resume/education.jade
+++ b/src/views/includes/resume/education.jade
@@ -16,8 +16,8 @@ article(id='candidate-education')
                         div(class='chip')
                             i(class='material-icons disabled') location_city
                             span(class='truncate') !{school.location}
-                    for more in school.plus
-                        div(class='chips-padding')
-                            div(class='chip')
-                                i(class='material-icons disabled') plus_one
-                                span(class='truncate') !{more}
+                    //for more in school.plus
+                    //    div(class='chips-padding')
+                    //        div(class='chip')
+                    //            i(class='material-icons disabled') plus_one
+                    //            span(class='truncate') !{more}
