--- a/src/views/includes/common/headerBack.jade
+++ b/src/views/includes/common/headerBack.jade
@@ -27,7 +27,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
         link(rel='stylesheet' href='stylesheets/vendor/materialize.min.css')
         link(rel='stylesheet' href='stylesheets/vendor/pace-theme-flat-top.css')
         link(rel='stylesheet' href='stylesheets/normalize.css')
-        link(rel='stylesheet' href='stylesheets/candidate.css')
+        link(rel='stylesheet' href='stylesheets/main.css')
         // JAVASCRIPTS
         script(src='javascripts/vendor/jquery-1.11.3.min.js')
         script(src='javascripts/vendor/pace.js')
