--- a/src/views/includes/common/footer.jade
+++ b/src/views/includes/common/footer.jade
@@ -1,17 +1,5 @@
-div.padding-bottom
-    div#bottom.container
-        div(class!= templates.footerHeader)
-            h3.white-text Drop a note
-                span.hide-on-small-only.white-text.smaller.right *OPTIONAL
-        footer#contact-section(class!= templates.footer)
-            span.show-on-small.hide-on-med-and-up.white-text.smaller.right *OPTIONAL
-            include ../components/hello
-        div(class!= templates.footerCopyright)
-            span.grey-text.text-lighten-4 #{year}
-            a.grey-text.text-lighten-4.right(href!= git) FORK ME
 //SCRIPTS
 script(src='javascripts/vendor/materialize.min.js')
 script(src='javascripts/vendor/init.js')
-script(src='javascripts/plugins.js')
-script(src='javascripts/main.js')
-script(src='javascripts/mail.js')
+script(src='javascripts/candidate.js')
+
