--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -5,19 +5,10 @@ block content
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     // SITE CONTENT
-    div(id='top' class='container')
-        // HEADER
-        include includes/resume/candidate
-        // OBJECTIVE
-        include includes/resume/objective
-        // RESUME
-        main(id='resume')
-            div(class='conatainer')
-                div(class='row')
-                    div(class='col s12 m12 l4')
-                        //LEFT SIDE -- CONTACT HIDDEN ON SMALL
-                        include includes/components/left
-                    div(class='col s12 m12 l8')
-                        //RIGHT SIDE
-                        include includes/components/right
-    include includes/common/footer
+    .bodyWrapper
+        .candidateWelcomeBackground
+            .container.center-align
+                .hide-on-med-and-up
+                    span.candidateFirstName !{info.firstName}
+                    //br
+                    //span.candidateLastName Hossain
