--- a/src/views/build.jade
+++ b/src/views/build.jade
@@ -39,7 +39,7 @@ block content
                                 h1#step1.step.black-text.remove-margin-top-bottom STEP 1
                         div#themeInput
                             include includes/build/theme
-                        #controls.card-panel
+                        .controls.card-panel
                             div.row.valign-wrapper.remove-margin-bottom
                                 div.col.s6.valign
                                     div.left
@@ -52,7 +52,7 @@ block content
                                 h1#step2.step.black-text.remove-margin-top-bottom STEP 2
                         div#userInput
                             include includes/build/user
-                        #controls.card-panel
+                        .controls.card-panel
                             div.row.valign-wrapper.remove-margin-bottom
                                 div.col.s6.valign
                                     div.left
@@ -66,7 +66,7 @@ block content
                                 h1#step3.step.black-text.remove-margin-top-bottom STEP 3
                         div#objectiveInput
                             include includes/build/objective
-                        #controls.card-panel
+                        .controls.card-panel
                             div.row.valign-wrapper.remove-margin-bottom
                                 div.col.s6.valign
                                     div.left
@@ -80,7 +80,7 @@ block content
                                 h1#step4.step.black-text.remove-margin-top-bottom STEP 4
                         div#skillInput
                             include includes/build/skills
-                        #controls.card-panel
+                        .controls.card-panel
                             div.row.valign-wrapper.remove-margin-bottom
                                 div.col.s6.valign
                                     div.left
@@ -94,7 +94,7 @@ block content
                                 h1#step5.step.black-text.remove-margin-top-bottom STEP 5
                         div#educationInput
                             include includes/build/education
-                        #controls.card-panel
+                        .controls.card-panel
                             div.row.valign-wrapper.remove-margin-bottom
                                 div.col.s6.valign
                                     div.left
@@ -108,7 +108,7 @@ block content
                                 h1#step6.step.black-text.remove-margin-top-bottom STEP 6
                         div#sitesInput
                             include includes/build/site
-                        #controls.card-panel
+                        .controls.card-panel
                             div.row.valign-wrapper.remove-margin-bottom
                                 div.col.s6.valign
                                     div.left
