--- a/src/views/mail.jade
+++ b/src/views/mail.jade
@@ -1,8 +1,8 @@
 doctype html
 html(xmlns='http://www.w3.org/1999/xhtml')
     head
-        link(rel='stylesheet', href= 'http://localhost:3000/stylesheets/mail.css')
-        link(rel='stylesheet', href= 'http://localhost:3000/stylesheets/vendor/materialize.min.css')
+        link(rel='stylesheet', href= 'http://intimidating-steer-2399.vagrantshare.com//stylesheets/mail.css')
+        link(rel='stylesheet', href= 'http://intimidating-steer-2399.vagrantshare.com//stylesheets/vendor/materialize.min.css')
         //GOOGLE FONTS
         link(href='https://fonts.googleapis.com/icon?family=Material+Icons' rel='stylesheet' type='text/css')
         link(href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700,800' rel='stylesheet' type='text/css')
@@ -14,13 +14,14 @@ block content
                 div(class='row valign')
                     div(class='card')
                         div(class='card-image')
-                            img(src= 'http://localhost:3000/images/maghrib.jpg')
+                            img(src= 'http://intimidating-steer-2399.vagrantshare.com//images/maghrib.jpg')
                             h1.truncate
                                 span(class='card-title heavy-font') Meet Maghrib
                         div(class='card-content')
                             p(class='flow-text padding-top') Thanks for reaching out!
                             blockquote #{message}
                             p #{senderName} #{senderEmail}
+                            br
                             p(class='flow-text padding-top') Well, now that you have my information, you can have your people set something up with my people. ;) I'll reply as soon as I get the chance. But in the meanwhile, let me introduce a dear friend of mine.
                             p(class='flow-text padding-top') This is Maghrib <span class="small" style="font-style:italic"> (maġrib).</span> He loves the heated space atop my laptop keyboard. <strong>Fun Fact:</strong> The picture above captures him in a position we at <a href="http://www.withpulp.com">With Pulp</a> call "Cat Loaf". :D
 
