--- a/src/views/includes/common/footer.jade
+++ b/src/views/includes/common/footer.jade
@@ -1,15 +1,18 @@
 div.padding-bottom
     div#bottom.container
         div(class!= templates.footerHeader)
-            h3.white-text Drop a note
+            h3.white-text Say hello.
                 span.hide-on-small-only.white-text.smaller.right *OPTIONAL
         footer#contact-section(class!= templates.footer)
-            span.show-on-small.hide-on-med-and-up.white-text.smaller.right *OPTIONAL
+            span.show-on-small.hide-on-med-and-up.smaller.right *OPTIONAL
             include ../components/hello
         div(class!= templates.footerCopyright)
-            span.grey-text.text-lighten-4 #{year}
-            a.grey-text.text-lighten-4.right(href!= git) FORK ME
+            a.grey-text.text-lighten-4(href!= git) FORK ME
+            span.grey-text.text-lighten-4.right a <a href='http://withpulp.com' class="amber-text" target='_blank'>WITHPULP</a> experiment
+include ../components/menu
 //SCRIPTS
+script(src='javascripts/vendor/classie.js')
+script(src='javascripts/vendor/menu.js')
 script(src='javascripts/vendor/materialize.min.js')
 script(src='javascripts/vendor/init.js')
 script(src='javascripts/plugins.js')
