--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -5,6 +5,7 @@ block content
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     // SITE CONTENT
+    include includes/components/navbar
     div(id='top' class='container')
         // HEADER
         include includes/resume/candidate
