changes to host requests

--- a/src/views/includes/resume/candidate.jade
+++ b/src/views/includes/resume/candidate.jade
@@ -15,10 +15,10 @@ header(id='resume-header')
                                         a(href!= 'mailto:' + email target='blank')
                                             i(class='material-icons') email
                                     li(class='inline')
-                                        a(href!= phone target='blank')
+                                        a(href!= phone, target='blank')
                                             i(class='material-icons') phone
                                     li(class='inline')
-                                        a(href!= host target='blank')
+                                        a(href!= website, target='blank')
                                             i(class='material-icons') public
                                     p(class='sub small right-align remove-margin-bottom') Curriculum Vitae
                                     p(class='sub small right-align remove-margin-top-bottom') <strong>Last Updated:</strong> 09.10.2015
